[package]
name = "alice-api"
version = "0.1.0"
edition = "2021"
authors = ["Moroya Sakamoto"]
description = "High-performance API Gateway with Distributed Rate Limiting and Zero-Copy Routing"
license = "AGPL-3.0"
repository = "https://github.com/anthropics/alice-api"
keywords = ["api-gateway", "rate-limiting", "gcra", "zero-copy"]
categories = ["network-programming", "web-programming"]
publish = false

[features]
default = ["std"]
std = []
auth = ["dep:alice-auth"]
crypto = ["dep:alice-crypto"]
secure = ["auth", "crypto"]
queue = ["dep:alice-queue", "std"]          # ALICE-Queue message queueing
analytics = ["dep:alice-analytics", "std"]  # ALICE-Analytics API metrics

[dependencies]
# Logging
log = "0.4"
# For zero-copy syscalls (splice, sendfile)
libc = "0.2"
# Optional: Ed25519 ZKP authentication
alice-auth = { path = "../ALICE-Auth", optional = true, default-features = false, features = ["std"] }
# Optional: XChaCha20-Poly1305 encryption
alice-crypto = { path = "../ALICE-Crypto", optional = true, default-features = false, features = ["std"] }
# Optional: Message queueing
alice-queue = { path = "../ALICE-Queue", optional = true }
# Optional: API metrics collection
alice-analytics = { path = "../ALICE-Analytics", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "api_bench"
harness = false

[[example]]
name = "rate_limiter"

[[example]]
name = "fair_queue"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
